# MetaNode---EVM-Golang-CPP

./: evm.cpp  evm.hpp  example.txt  go.mod  main.go
eEVM/: CMakeLists.txt
eEVM/include/eEVM/: processor.h  util.h
eEVM/samples/call_other_contract/: main.cpp
eEVM/samples/company_wallet/: main.cpp
eEVM/samples/my_erc/: main.cpp
eEVM/samples/native_coin/: main.cpp
eEVM/src/: processor.cpp  util.cpp
eEVM/src/simple/: simpleglobalstate.cpp
